--- a/src/Weather.css
+++ b/src/Weather.css
@@ -4,9 +4,28 @@
     box-sizing: border-box;
 }
 
+body{
+    color: black;
+}
+
 main{
     min-height: 100vh;
     padding: 25px;
+    background-image: linear-gradient(to bottom,  rgba(0,0,0,0.1), rgba(0,0,0,0.5));
+}
+
+.app{
+    background-image: url('./assets/cold.jpg');
+    background-size: cover;
+    background-position: bottom;
+    transition: 0.4s ease-in;
+}
+
+.app-warm {
+    background-image: url('./assets/bg.jpg');
+    background-size: cover;
+    background-position: bottom;
+    transition: 0.4s ease-in;
 }
 
 .search-box{
@@ -36,8 +55,49 @@ main{
 }
 
 .location-box .location{
-    color: #fff;
+    color: white;
     font-size: 32px;
+    font-weight: 500px;
+    text-align: center;
+    text-shadow: 3px 3px rgba(50,50,50,0.5);
 }
+
+.location-box .date{
+    color: white;
+    text-align: center;
+    font-size: 20px;
+    font-weight: 300;
+    font-style: italic;
+    text-shadow: 2px 2px rgba(50, 50, 70, 0.5);
+}
+
+.weather-box{
+    text-align: center;
+}
+
+.weather-box .temp{
+    position: relative;
+    display: inline-block;
+    margin: 30px auto;
+    background-color: rgba(255,255,255, 0.2);
+    border-radius: 16px;
+    padding: 15px 25px;
+    color: #fff;
+    font-size: 102px;
+    font-weight: 900;
+    text-shadow: 3px 6px rgba(50, 50, 70, 0.5);
+    text-align: center;
+    box-shadow: 3px 6px rgba(50,50,50,0.2);
+}
+
+.weather-box .weather{
+    color: #fff;
+    text-shadow: 3px 3px rgba(50,50,70,0.5);
+    font-size: 48px;
+    font-weight: 700;
+
+}
+
+
 
 
